lab2/k8s/service2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
     labels:
       app: service2
    spec:
      containers:
        - image: zhenyanovikov/service2:0.2
          name: service2
          imagePullPolicy: Always # політика оновлення образу
          ports:
            - containerPort: 8080
